--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-   
-    "dev":"ts-node-dev --respawn --transpile-only ./src/operatorAndDestructuring.ts"
+
+    "dev":"ts-node-dev --respawn --transpile-only ./src/typeAssertion.ts"
   },
   "keywords": [],
   "author": "",
